--- a/src/assets/styles/dashkit/_user.scss
+++ b/src/assets/styles/dashkit/_user.scss
@@ -131,7 +131,7 @@ a.icon-lg.active {
 
 .dropdown-menu {
   background: #17222d;
-  // box-shadow: 0 0 1.875rem rgb(0 0 0 / 25%);
+  box-shadow: 0 0 1.875rem rgba(0, 0, 0, 0.25);
   border-color: #17222d;
 }
 .dropdown-item {
